--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
         <div class="hero-visual">
           <div class="hero-image-card">
             <div class="image-stack">
-              <div class="image-frame main-image">
-                <img src="assets/jazz-sax-closeup.jpg" alt="Close-up of saxophone under warm light" />
-              </div>
-              <div class="image-frame inset-image inset-top">
-                <img src="assets/jazz-booth-velvet.jpg" alt="Red velvet booth with brass table light" />
-              </div>
-              <div class="image-frame inset-image inset-bottom">
-                <img src="assets/jazz-room-wide.jpg" alt="Dark jazz room with bar and low light" />
-              </div>
-            </div>
+  <div class="image-frame main-image">
+    <img src="assets/jazz-hands-piano.jpg" alt="Piano hands under warm light" />
+  </div>
+  <div class="image-frame inset-image inset-top">
+    <img src="assets/jazz-booth-velvet.jpg" alt="Red velvet booth with brass table light" />
+  </div>
+  <div class="image-frame inset-image inset-bottom">
+    <img src="assets/jazz-sax-closeup.jpg" alt="Close-up of saxophone under warm light" />
+  </div>
+</div>
             <div class="hero-image-overlay">
               <p class="chip chip-gold">Limited booths · 6 only</p>
               <p class="chip">Designed as a one-off experience hub</p>
